--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@changesets/cli": "^2.29.0",
 		"biome": "^0.3.3",
 		"tsup": "^8.4.0",
-		"typescript": "^5.8.3"
+		"typescript": "^5.8.3",
+		"vitest": "^3.1.1"
 	}
 }
