--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
 	"description": "An algorithm for selecting a leader from all the open tabs of a website.",
 	"license": "MIT",
 	"author": "frectonz",
-	"files": [
-		"dist"
-	],
+	"files": ["dist"],
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
@@ -33,8 +31,8 @@
 	],
 	"packageManager": "pnpm@10.8.0",
 	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
 		"@changesets/cli": "^2.29.0",
-		"biome": "^0.3.3",
 		"tsup": "^8.4.0",
 		"typescript": "^5.8.3",
 		"vitest": "^3.1.1"
