--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": [".direnv", "tsconfig.json", "dist"]
+		"ignore": [".direnv", "tsconfig.json", "dist", "package.json"]
 	},
 	"formatter": {
 		"enabled": true,
